merge-anything/main/default/objects/Merge_Item__c/Merge_Item__c.object-meta.xml
<CustomObject>
    <label>Merge Item</label>
    <nameField>
        <displayFormat>MI-{000000}</displayFormat>
        <label>Merge Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merge Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>