merge-anything/main/default/objects/Merge_Item__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of merge execution attempts that ended in Failed for this item.</description>
    <label>Merge Attempt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>