merge-anything/main/default/objects/Merge_Item__c/fields/Field_Selections_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Selections_JSON__c</fullName>
    <description>Serialized merge field choices (field API name and usePrimary) used to rebuild merged JSON on execution.</description>
    <inlineHelpText>JSON array of field-level primary vs secondary choices for this merge item.</inlineHelpText>
    <label>Field Selections JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>