merge-anything/main/default/objects/Merge_Item__c/fields/Merge__c.field-meta.xml
<CustomField>
    <fullName>Merge__c</fullName>
    <label>Merge</label>
    <referenceTo>Merge__c</referenceTo>
    <relationshipLabel>Merge Items</relationshipLabel>
    <relationshipName>Merge_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>