merge-anything/main/default/objects/Merge_Item__c/fields/Merge_Action__c.field-meta.xml
<CustomField>
    <fullName>Merge_Action__c</fullName>
    <description>Whether to keep the duplicate row after field merge only, or also reparent related records and delete the duplicate.</description>
    <inlineHelpText>Select how related records should be handled when the merge runs.</inlineHelpText>
    <label>Merge Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merge_Reparent_and_Delete</fullName>
                <default>true</default>
                <label>Merge, Reparent and Delete</label>
            </value>
            <value>
                <fullName>Merge_and_Keep</fullName>
                <label>Merge and Keep</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>