merge-anything/main/default/objects/Merge_Item__c/fields/Merge_Error__c.field-meta.xml
<CustomField>
    <fullName>Merge_Error__c</fullName>
    <label>Merge Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>