merge-anything/main/default/objects/Merge_Item__c/fields/Merge_Job__c.field-meta.xml
<CustomField>
    <fullName>Merge_Job__c</fullName>
    <label>Merge Job</label>
    <referenceTo>Merge_Job__c</referenceTo>
    <relationshipLabel>Merge Items</relationshipLabel>
    <relationshipName>Merge_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>