merge-anything/main/default/objects/Merge_Item__c/fields/Merged_Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Merged_Record_JSON__c</fullName>
    <description>Merged JSON representation of primary and secondary record data.</description>
    <inlineHelpText>Merged JSON representation of primary and secondary record data.</inlineHelpText>
    <label>Merged Record JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>