merge-anything/main/default/objects/Merge_Item__c/fields/Merging_Object__c.field-meta.xml
<CustomField>
    <fullName>Merging_Object__c</fullName>
    <description>API name of the sObject being merged (for filtering and discovery).</description>
    <label>Merging Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>