merge-anything/main/default/objects/Merge_Item__c/fields/Primary_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record_Id__c</fullName>
    <description>The Id of the primary record.</description>
    <inlineHelpText>The Id of the primary record.</inlineHelpText>
    <label>Primary Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>