merge-anything/main/default/objects/Merge_Item__c/fields/Primary_Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record_JSON__c</fullName>
    <description>Original JSON representation of primary record data.</description>
    <inlineHelpText>Original JSON representation of primary record data.</inlineHelpText>
    <label>Primary Record JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>