merge-anything/main/default/objects/Merge_Item__c/fields/Primary_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record_Link__c</fullName>
    <formula>(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Primary_Record_Id__c)</formula>
    <label>Primary Record Link</label>
    <type>Text</type>
</CustomField>