merge-anything/main/default/objects/Merge_Item__c/fields/Primary_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record_Name__c</fullName>
    <description>Display label for the primary record (typically the object name field).</description>
    <label>Primary Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>