merge-anything/main/default/objects/Merge_Item__c/fields/Primary_Source_Modified__c.field-meta.xml
<CustomField>
    <fullName>Primary_Source_Modified__c</fullName>
    <description>LastModifiedDate of the primary record when merge item snapshots were captured.</description>
    <inlineHelpText>Used to detect whether the primary record changed after this merge item was defined.</inlineHelpText>
    <label>Primary Source Modified</label>
    <type>DateTime</type>
</CustomField>