merge-anything/main/default/objects/Merge_Item__c/fields/Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Record_Object__c</fullName>
    <description>API name of the sObject of the primary and secondary records (for filtering and discovery).</description>
    <label>Record Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>