merge-anything/main/default/objects/Merge_Item__c/fields/Secondary_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record_Id__c</fullName>
    <description>The Id of the secondary record.</description>
    <inlineHelpText>The Id of the secondary record.</inlineHelpText>
    <label>Secondary Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>