merge-anything/main/default/objects/Merge_Item__c/fields/Secondary_Record_JSON__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record_JSON__c</fullName>
    <description>Original JSON representation of secondary record data.</description>
    <inlineHelpText>Original JSON representation of secondary record data.</inlineHelpText>
    <label>Secondary Record JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>