merge-anything/main/default/objects/Merge_Item__c/fields/Secondary_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record_Link__c</fullName>
    <formula>(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Secondary_Record_Id__c)</formula>
    <label>Secondary Record Link</label>
    <type>Text</type>
</CustomField>