merge-anything/main/default/objects/Merge_Item__c/fields/Secondary_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Record_Name__c</fullName>
    <description>Display label for the secondary record (typically the object name field).</description>
    <label>Secondary Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>