merge-anything/main/default/objects/Merge_Item__c/fields/Secondary_Source_Modified__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source_Modified__c</fullName>
    <description>LastModifiedDate of the secondary record when merge item snapshots were captured.</description>
    <inlineHelpText>Used to detect whether the secondary record changed after this merge item was defined.</inlineHelpText>
    <label>Secondary Source Modified</label>
    <type>DateTime</type>
</CustomField>